--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!-- Write your HTML in this file -->
-<a href="">Introduction to the web</a><
+<a href="https://flatironschool.com">Flatiron School</a>
